# ObsidianWrapper

./: .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt
obsidian_wrapper/: markdown_object.py  obsidian.py  obsidian_file.py  obsidian_markdown_file.py  obsidian_vault.py
obsidian_wrapper_plus/: markdown_element.py  markdown_file.py  markdown_line.py  markdown_object.py
obsidian_wrapper_plus/typed_dicts/: file_stats.py
tests/unit/: test_markdown_object.py  test_obsdian_vault.py
