[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-wraper"
version = "0.0.1"
authors = [
  { name="Ghazanfar Shahbaz", email="ghazanfarshahbaz2409@gmail.com" },
]
description = "A wrapper for Obsidian vaults."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/GhazanfarShahbaz/ObsidianWrapper"